--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@meza/adr-tools",
+  "name": "@catchpowle/adr-tools",
   "version": "1.0.10",
   "exports": {
     ".": {
@@ -67,7 +67,7 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@commitlint/prompt-cli": "^17.0.0",
     "@faker-js/faker": "^7.3.0",
-    "@meza/adr-tools": "^1.0.10",
+    "@catchpowle/adr-tools": "file:./",
     "@meza/tsconfig-base": "^1.1.0",
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
